AM_CXXFLAGS = @AM_CXXFLAGS@ -I$(top_srcdir)/Falling -O2 -Wall -Wextra -Werror
lib_LIBRARIES = libfalling.a
libfalling_adir =  $(includedir)/libfalling_adir
libfalling_a_HEADERS = stdafx.h SubCollision.h targetver.h TunningConstants.h Vector2D.h Point2D.h Tesselator.h VitessSolver.h Island.h RigidBody.h SAPsolver.h Shapes.h OBB.h OBBtree.h PairManager.h PenetrationSolver.h PixelPerfectShape.h PixelPerfectSolver.h PlaneShapeSolver.h Polygon2D.h Primitives.h DiskBoxSolver.h DiskDiskSolver.h Disk.h DistanceSolver.h DoubleLinkedList.h FakeShape.h Falling.h floatTests.h GenericSolver.h GeometryHelper.h ImpulseSolver.h InfinitePlane.h CollisionArbiter.h CollisionDetector.h ContactGenerator.h ContactBatch.h AABB.h BoxBoxSolver.h
libfalling_a_SOURCES = \
		       		$(libfalling_a_HEADERS) \
				stdafx.cpp Vector2D.cpp Point2D.cpp SubCollision.cpp Tesselator.cpp VitessSolver.cpp RigidBody.cpp SAPsolver.cpp Shapes.cpp OBBtree.cpp PairManager.cpp PenetrationSolver.cpp PixelPerfectShape.cpp PixelPerfectSolver.cpp PlaneShapeSolver.cpp Polygon2D.cpp Disk.cpp DiskDiskSolver.cpp DistanceSolver.cpp dllmain.cpp FakeShape.cpp Falling.cpp floatTests.cpp GenericSolver.cpp GeometryHelper.cpp ImpulseSolver.cpp InfinitePlane.cpp Island.cpp OBB.cpp CollisionDetector.cpp ContactGenerator.cpp ContactBatch.cpp AABB.cpp CollisionArbiter.cpp 
